added pseudo code and edited index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- remove accordion menu
+    style drop down calendars
+    give make search results hover effect
+    remove show weather, show venu buttons, and images from the API
+    place weather at end of all search results, unless date is beyond forecast range.
+    if beyond forecast range, do not put forecast infor on search results.
+    on hover, place location pin on map
+    resize map and include directions dialogue
+    on submission of directions points, enlarge map to show route and direcrtions panel -->
+
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
