changed layout to remove placeholder images

--- a/front-map.html
+++ b/front-map.html
@@ -14,7 +14,7 @@
   <body>
     <div id="map"></div>
    
-    <script src="./assets/javascript/front-map.js"></script>
+    <script src="./assets/javascript/map2.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW51bpjHefnDpcpjD-uvALl0jhTwaBFG8&callback=initMap">
     </script>
