trying to debug google map issus

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <div class="col-md-4 mt-6">
                 <div class="card" style="width: 340px" id="map-card">
                     <div class="card-body">
+                        <form >
                         <h5 class="card-title" id="map-title">New York City</h5>
                         <b>Mode of Travel: </b>
                         <select id="mode">
@@ -95,11 +96,10 @@
                           <option value="BICYCLING">Bicycling</option>
                           <option value="TRANSIT">Transit</option>
                         </select>
-                
-                        <form >
+                        
                           beginning: <input type="text" id="start"  name="start"><br>
                           Destination <input type="text"  id="end" name="end"><br>
-                          <input type="submit" value="Submit" id="submit">
+                          <input type="submit" value="Submit" id="findDirections">
                         </form>
                         <div id="map"></div>
                     </div>
