--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 </head>
 
 <body>
+    <div id="floating-panel"></div>
+
     <!-- navigation bar -->
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="app.html">Night Out</a>
@@ -80,7 +82,7 @@
         <!-- display search results -->
         <div class="row mt-5">
             <!-- section to display event results -->
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div id="events-display"></div>
             </div>
             <!-- section to display the map results -->
@@ -96,12 +98,14 @@
                           <option value="BICYCLING">Bicycling</option>
                           <option value="TRANSIT">Transit</option>
                         </select>
-                        
+
                           beginning: <input type="text" id="start"  name="start"><br>
                           Destination <input type="text"  id="end" name="end"><br>
                           <input type="submit" value="Submit" id="findDirections">
                         </form>
+              
                         <div id="map"></div>
+                        <div id="right-panel"></div>
                     </div>
                 </div>
             </div>
@@ -112,11 +116,11 @@
    
 
     <!-- google maps -->
-    <script src="./assets/javascript/map2.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW51bpjHefnDpcpjD-uvALl0jhTwaBFG8&callback=initMap">
     </script>
     <!-- link to app javascript file -->
+    <!-- <script src="./assets/javascript/map2.js"></script> -->
     <script src="assets/javascript/event-search-box.js"></script>
 </body>
 </html>
