fixed google map display issue

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>  
     
 
-   
+       <script src="assets/javascript/event-search-box.js"></script>
 
     <!-- google maps -->
     <script async defer
@@ -121,6 +121,6 @@
     </script>
     <!-- link to app javascript file -->
     <!-- <script src="./assets/javascript/map2.js"></script> -->
-    <script src="assets/javascript/event-search-box.js"></script>
+    <!-- <script src="assets/javascript/event-search-box.js"></script> -->
 </body>
 </html>
