fixed map directions

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
         <!-- display search results -->
         <div class="row mt-5">
             <!-- section to display event results -->
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div id="events-display"></div>
             </div>
             <!-- section to display the map results -->
-            <div class="col-md-4 mt-6">
+            <div class="col-md-4 mt-8">
                 <div class="card" style="width: 340px" id="map-card">
                     <div class="card-body">
                         <form >
                         <h5 class="card-title" id="map-title">New York City</h5>
                         <b>Mode of Travel: </b>
-                        <select id="mode">
+                        <select id="travelMode">
                           <option value="DRIVING">Driving</option>
                           <option value="WALKING">Walking</option>
                           <option value="BICYCLING">Bicycling</option>
