added current location to directionsfunction

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <option value="TRANSIT">Transit</option>
                                 </select>
 
-                                beginning: <input type="text" id="start" name="start"><br>
+                                beginning: <input type="text" id="start" placeholder="Your location" name="start"><br>
                                 Destination <input type="text" id="end" name="end"><br>
                                 <input type="submit" value="Submit" id="findDirections">
                             </form>
