removed old files

--- a/indexX.html
+++ b/indexX.html
@@ -37,12 +37,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <!-- link to css -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <!-- <link href="./assets/css/map.css" rel="stylesheet"/> -->
 </head>
 
 <body>
 
-    <div style="background: url(./assets/images/bkg.jpg)" class="page-holder bg-cover">
+    <div style="background: url(./assets/images/img.jpg)" class="page-holder bg-cover">
 
         <div id="floating-panel"></div>
 
@@ -118,15 +117,13 @@
         </div>
     </div>
 
+    <!-- code for TicketMaster and Google Maps APIs -->
     <script src="assets/javascript/event-search-box.js"></script>
 
     <!-- google maps -->
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW51bpjHefnDpcpjD-uvALl0jhTwaBFG8&callback=initMap">
     </script>
-    <!-- link to app javascript file -->
-    <!-- <script src="./assets/javascript/map2.js"></script> -->
-    <!-- <script src="assets/javascript/event-search-box.js"></script> -->
 </body>
 
 </html>
