--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A Night Out</title>
 
@@ -43,25 +43,23 @@
 
     <div style="background: url(./assets/images/bkg.jpg)" class="page-holder bg-cover">
         <!-- navigation bar -->
-
-
         <nav class="navbar navbar-dark bg-dark navbox">
-            <a class="navbar-brand" id="navtext" href="app.html">A Night Out</a>
+            <a class="navbar-brand" id="navtext" href="app.html">A Night Out</a>>
             <form class="form-inline">
                 <div class="formbox">
                     <input class="form-control mt-3 mb-3 searchthing" type="text" id="search-keyword"
                         placeholder="Search Events">
-                    <!-- <label for="from"><i class="far fa-calendar-alt formitems"></i> From: </label> -->
+
                     <input class="form-group formitems" type="text" id="from" name="from" placeholder="From">
-                    <!-- <label for="to"><i class="far fa-calendar-alt"></i> To: </label> -->
+
                     <input class="form-group formitems" type="text" id="to" name="to" placeholder="To">
                     <br>
                     <button type="submit" class="btn btn-primary formitems" id="search-events"><i
                             class="fas fa-search"></i>
                         Search</button>
-                    <button type="reset" class="btn btn-primary formitems" id="clear-results"><i
+                    <button type="reset" class="btn btn-primary formitems " id="clear-results"><i
                             class="fas fa-trash-alt"></i>
-                        Clear Results</button>
+                        Clear</button>
                 </div>
             </form>
         </nav>
@@ -97,8 +95,11 @@
             <!-- display search results -->
             <div class="row mt-5">
                 <!-- section to display event results -->
+
                 <div class="col-md-4">
-                    <div id="events-display"></div>
+                    <div class="overflowY">
+                        <div id="events-display"></div>
+                    </div>
                 </div>
                 <!-- section to display the map results -->
                 <div class="col-md-4 mt-">
@@ -117,6 +118,7 @@
 
                                     beginning: <input type="text" id="start" placeholder="Your location"
                                         name="start"><br>
+
                                     Destination <input type="text" id="end" name="end"><br>
                                     <input type="submit" value="Submit" id="findDirections">
                                 </form>
@@ -133,9 +135,10 @@
             </div>
         </div>
     </div>
+    </div>
 
     <!-- code for TicketMaster and Google Maps APIs -->
-    <script src="assets/javascript/event-search-box.js"></script>
+    <script src="assets/javascript/app.js"></script>
 
     <!-- google maps -->
     <script async defer
